updated print statements

--- a/tc-first-feature.ipynb
+++ b/tc-first-feature.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('more changes')"
+    "print('more changes and more')"
    ]
   }
  ],
